--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Project for creating dynamic charts and graphs.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "clean": "rm dist/bundle.js",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,9 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
-    "webpack": "^5.91.0"
-  }
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "keywords": []
 }
