--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Project for creating dynamic charts and graphs.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build",
     "dev": "webpack --mode development",
+    "start": "webpack serve",
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production"
@@ -26,9 +27,16 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "keywords": []
 }
