--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.0",
     "jquery": "^3.7.1",
-    "jquery-ui": "^1.13.3"
+    "jquery-ui": "^1.13.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
