--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.11.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.13.3",
+    "papaparse": "^5.4.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
