--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Valentina-Kipel/Chart-Space#readme",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "firebase": "^10.11.0",
     "jquery": "^3.7.1",
     "jquery-ui": "^1.13.3",
